extra/k8/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deploy
  labels:
    app: app1
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: pyweb
        image: rslim087/kubernetes-course-grade-submission-portal:v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5001
        resources:
          requests:
            memory: "15Mi"
            cpu: "50m"
          limits:
            memory: "50Mi"
            cpu: "200m"
        volumeMounts:
        - name: log-volume
          mountPath: /opt/volume/nginx
      volumes:
      - name: log-volume
        persistentVolumeClaim:
          claimName: myapp-pvc


#image: deep0697/pyapp:latest
